# mock/swagger.yml
@@ -19,7 +19,208 @@ tags:
     description: Transactions data related api.
   - name: users
     description: Users related api.
-paths:
+  - name: players
+    description: 玩家相关的api
+paths:   
+  /players:
+    get:
+      tags:
+        - players
+      summary: 获取玩家信息列表
+      description: 返回玩家信息列表
+      operationId: getPlayers
+      parameters:
+        - name: acountname
+          in: query
+          description: 账号用于查询用户
+          schema:
+            type: string
+        - name: nickname
+          in: query
+          description: 昵称用于查询用户
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: 页码
+          schema:
+            type: integer
+            format: int32
+            minimum: 1
+        - name: limit
+          in: query
+          description: 每页数量
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            maximum: 50
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        format: int32
+                      items:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Player'
+    post:
+      summary: 创建玩家
+      tags:
+        - players
+      description: 创建玩家，返回新创建玩家数据
+      operationId: createPlayer
+      security:
+        - AccessTokenAuth: []
+      parameters:
+        - name: article
+          in: query
+          required: true
+          description: 新建玩家数据
+          schema:
+            $ref: '#/components/schemas/Player'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      article:
+                        $ref: '#/components/schemas/Player'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+
+  /players/{id}:
+    get:
+      tags:
+        - players
+      summary: 获取指定玩家信息
+      description: 获取id对应玩家信息
+      operationId: getPlayer
+      security:
+        - AccessTokenAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Player id.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      article:
+                        $ref: '#/components/schemas/Player'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+    put:
+      tags:
+        - players
+      summary: 更新玩家信息
+      description: 更新指定id的玩家信息
+      operationId: updatePlayer
+      security:
+        - AccessTokenAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: 玩家id
+          schema:
+            type: integer
+            format: int64
+        - name: player
+          in: query
+          required: true
+          description: 要更新的玩家数据
+          schema:
+            $ref: '#/components/schemas/Player'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      article:
+                        $ref: '#/components/schemas/Article'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+    delete:
+      tags:
+        - players
+      summary: 删除玩家信息
+      description: 删除指定id玩家信息
+      operationId: deletePlayer
+      security:
+        - AccessTokenAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: 玩家id.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+  
   /articles:
     get:
       tags:
@@ -120,6 +321,7 @@ paths:
                         $ref: '#/components/schemas/Article'
         401:
           $ref: '#/components/responses/Unauthorized'
+
   /articles/{id}:
     get:
       tags:
@@ -345,6 +547,7 @@ paths:
                         format: int64
         401:
           $ref: '#/components/responses/Unauthorized'
+
   /roles/{id}:
     put:
       tags:
@@ -552,6 +755,7 @@ paths:
                         example: admin-token
         400:
           $ref: '#/components/responses/InvalidUser'
+
   /users/logout:
     post:
       tags:
@@ -746,6 +950,37 @@ components:
       required:
         - code
         - message
+    Player:
+      type: object
+      properties:
+        id:
+          type: integer
+        account:
+          type: string
+        nickname:
+          type: string
+        avatar:
+          type: string
+        level:
+          type: integer
+        exp:
+          type: integer
+        rank:
+          type: integer
+        bravepoints:
+          type: integer
+        winningstreak:
+          type: integer
+        wanttoplay:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                type: string
+              icon:
+                type: string
+
     Article:
       type: object
       properties:
